# proxasaurus

./: .env.example  .gitignore  README.md  pyproject.toml
src/proxasaurus/: client.py  k8s_client.py  server.py
src/proxasaurus/tools/: alerts.py  audit.py  backups.py  clusters.py  k8s_clusters.py  k8s_nodes.py  k8s_workloads.py  nodes.py  provisioning.py  schedules.py  snapshots.py  storage.py  vms.py
